--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.94.1",
+    "@aws-cdk/aws-s3": "^1.94.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "1.94.1",
